# ModbusI2C

./: CMakeLists.txt  ModbusI2C.pro  README.md  i2cinterface.cpp  i2cinterface.h  main.c
